--- a/index.html
+++ b/index.html
@@ -2,10 +2,13 @@
 <html lang="en-ca">
 <head>
   <meta charset="utf-8">
-  <title></title>
+  <title>Javascript</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
-  <link href=".css" rel="stylesheet">
-</head>
+  <link href="css/modules.css" rel="stylesheet">
+  <link href="css/grid.css" rel="stylesheet">
+  <link href="css/type.css" rel="stylesheet">
+  <link href="css/main.css" rel="stylesheet">
+  </head>
 <body>
 
   <section class="max-length">
@@ -46,7 +49,9 @@
       <li>
         <label class="carousel-btn" for="megatherium-control">Megatherium</label>
       </li>
+    </ul>
     </div>
   </div>
+</section>
 </body>
 </html>
